--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "rect": "^1.2.1",
     "sanity": "3.18.0",
     "sanity-plugin-asset-source-unsplash": "1.1.1",
